# orchestrator

./: .ai-factory.json  .gitignore  AGENTS.md  CLAUDE.md  README.md  orchestrator.json.example  pyproject.toml
.ai-factory/: ARCHITECTURE.md  DESCRIPTION.md  ROADMAP.md  ROADMAP_TESTS.md  config.yaml  orchestrator-state.json
.ai-factory/handoffs/: 01-orchestrator-config-repl-roadmap.md  02-planner-prompt-explore-tool-mismatch.md  03-multiuser-named-roadmaps-orchestrator-side.md  04-named-test-roadmap-stem-mismatch.md  05-code-cites-plan-layer-orchestrator-side.md  06-reserved-words-language-and-rescue-rename-orchestrator-side.md  07-language-contract-softened-to-naming-only.md
.ai-factory/notes/: 01-test-pipeline-mode.md  02-planner-step3-direct-exploration.md  02-test-planner-prompt-and-skills.md  03-follow-mentions.md  03-session-id-persistence.md  04-drop-description-reads.md  04-explicit-step-tracking.md  05-sidecar-robustness.md  05-specs-wording.md  06-resume-guard-and-write-hardening.md  07-remove-refactor-review-flows.md  08-rescue-sidecar-consistency.md  09-adaptive-usage-guard.md  10-phase-session-persistence.md  (+8 more)
docs/: configuration.md  context-model.md  failures-and-halts.md  how-it-works.md  migrate-to-named-roadmap.md  non-convergence.md  phase-sessions.md  refactor-mode.md  target-project.md  test-mode.md  workflow.md
orchestrator/: agents.py  config.py  main.py  notify.py  resume.py  roadmap.py  runtime.py  state.py  usage.py
tests/: conftest.py  test_agents.py  test_config.py  test_main.py  test_notify.py  test_roadmap.py  test_runtime.py
(+377 files in other folders)
